* BUG#10098 Allow list view when Ctrl+click
* BUG#9909 Autorefresh modal codeMirror using addon

Version 4.8.6 - 2018-09-22
* Bug fixes (see mercurial logs for details)

Version 4.8.5 - 2018-08-20
* Bug fixes (see mercurial logs for details)

Version 4.8.4 - 2018-08-03
* Bug fixes (see mercurial logs for details)

Version 4.8.3 - 2018-07-05
* Bug fixes (see mercurial logs for details)

* BUG#9960 Correctly set operand for M2M and O2M size_limt
* BUG#9293 Add linting to rule algorithms
* BUG#9680 Remove text color change on dropdown menu when hover element
* BUG#9678 Set default color on btn-primary
* BUG#9457 Apply factor on domain parser
* BUG#9504 Load CodeMiror inside Docker
* BUG#9468 Fix file extension missing when using excel export from tree view
* BUG#9467 Display total sum of commission
* BUG#9446 Only set width 100 to inputfrom inside dict
* BUG#8756 Only open link when using ctrl key
* BUG#9035 Remove checkbox for always ignoring warnings
* FEA#8271 Add support of expand attribute on group tag
* FEA#8785 Change title to Coog in the Sao browser
* FEA#7941 Add keyword attribute to button tag
* OTH#0000 Correct grunt installation steps in README
* BUG#8817 Fix width of selection input
* BUG#8840 Show scrollbar on modal
* BUG#8839 Allow link inside modal
* BUG#8810 Prevent crash on selection of m2m in form view
* BUG#8779 Use input number and toLocaleString for numeric fields
* BUG#8720 Prevent call to focus when not defined on widget
* BUG#8703 Show visible boolean extra data
* BUG#8705 Add white color for link
* BUG#8706 Remove link when line is not selected
* BUG#7226 Hide selection state
* BUG#8474 Add position and count label on one2many widget and tree view : http://hg.tryton.org/sao/rev/e19282c20d57
* BUG#7226 Refactor the editable tree process  : http://hg.tryton.org/sao/rev/cf989f7a944e/
* BUG#8474 Ensure consistent treeview rendering by using fixed table-layout : http://hg.tryton.org/sao/rev/60d4cde3ed8f

* BUG#8651 Remove right blank space