@@ -1,3 +1,4 @@
+* BUG#10127 Clean session if local session is wrong and we got an ir.session error
 * BUG#10098 Allow list view when Ctrl+click
 * BUG#9909 Autorefresh modal codeMirror using addon
 
